add feature and run car

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <div class="surface"></div>
 
         <div class="car">
-            <img src="images/Img_06.png" alt="">
+            <img src="images/Img_06.png" alt="car">
         </div>
     </div>
 
